@@ -1,5 +1,5 @@
 DIST MP3Diags-0.99.02.018.tar.gz 849355 RMD160 36534f2f54b0ebf0817a42e44a48262748ca8e84 SHA1 b80054835b183f57687a78e8ae0dce743ca7c74d SHA256 eb602742ba6e19e94613583099f9d4bef7cbadb859b8e5744b0f56444c8c7bd6
-EBUILD mp3diags-0.99.02.018.ebuild 860 RMD160 1207a50348972df315e442fa5a65026e3bb15eab SHA1 6fef24f6931fe4b66505e4cd7f01dd1766980e87 SHA256 b0b0b1f23a9b2db58faf73e557460e0bf8b4151933ab8ecde0576b50693da102
-EBUILD mp3diags-9999.ebuild 945 RMD160 e97b16b1176d4af552f9d8effd86c5414f14e3f5 SHA1 860dafd8e566263df84736369e13a5194cbdb4a8 SHA256 c927a0f244f588e2847387add3deea758ac140edb1759959a89c6bd7dfd6111f
-MISC ChangeLog 319 RMD160 63595ed77572a1777f8717ea4645075eb699d479 SHA1 3b6176803997521816a18d5358441cf60d2de571 SHA256 75707fc4d5cc2e49c466c4e2e32de6394b0fa6303dec66712ee200c6963ec313
+EBUILD mp3diags-0.99.02.018.ebuild 862 RMD160 55059e1b4c8502263fbb291cf7d7b902006b5ae3 SHA1 76b1f52b1adf774a8219d5de0ff8797c7931b057 SHA256 526be43aa7012f85b416c3dd27f2b509f7d0b65dd7c2fa2ff7dc5e0a80049de0
+EBUILD mp3diags-9999.ebuild 946 RMD160 001a536ae184890f759831238a4dca26703c9c91 SHA1 c2a95f083039454e73507c1b0d5c2a00283d99b4 SHA256 3e9c8283153838fd67e1a46e684b1ed59ebd67ed313c480cd490ae2be77da55c
+MISC ChangeLog 448 RMD160 46cc52e133c3eebe0bc5ef3ebe9f8365c4b81f5a SHA1 fc3010d4c3acd1ea149909a32261cea1dc01880d SHA256 0e5460c5492ad024b38f005419823a71fade47e2dcf6863f636ec819b7147aec
 MISC metadata.xml 294 RMD160 a876c02ee69404aba92cd94beed6a238e0043581 SHA1 ac44a6cbf847ec1a492eaecbb7ffd6bce60a380d SHA256 43aeca91b633f1d854fba6e201a4321e46e96e4549361330926ea0e522cc00ba
