@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  29 Jun 2009; Dominik Kapusta <d@ayoy.net> mp3diags-0.99.02.018.ebuild,
+  mp3diags-9999.ebuild:
+  Fixed license
+
 *mp3diags-9999 (27 Jun 2009)
 *mp3diags-0.99.02.018 (27 Jun 2009)
 
